WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
59037
REGRESSION(
r82376
): Clicking on a label, associated with a disabled input element changes state of the element.
https://bugs.webkit.org/show_bug.cgi?id=59037
Summary
REGRESSION(r82376): Clicking on a label, associated with a disabled input ele...
Dimitri Glazkov (Google)
Reported
2011-04-20 16:31:59 PDT
REGRESSION(
r82376
): Clicking on a label, associated with a disabled input element changes state of the element.
Attachments
Patch
(3.86 KB, patch)
2011-04-20 16:32 PDT
,
Dimitri Glazkov (Google)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dimitri Glazkov (Google)
Comment 1
2011-04-20 16:32:59 PDT
Created
attachment 90440
[details]
Patch
Kent Tamura
Comment 2
2011-04-20 16:36:01 PDT
Comment on
attachment 90440
[details]
Patch ok
WebKit Commit Bot
Comment 3
2011-04-20 17:23:50 PDT
Comment on
attachment 90440
[details]
Patch Clearing flags on attachment: 90440 Committed
r84440
: <
http://trac.webkit.org/changeset/84440
>
WebKit Commit Bot
Comment 4
2011-04-20 17:23:55 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug