2011-04-20  Dimitri Glazkov  <dglazkov@chromium.org>

Reviewed by Kent Tamura.

        REGRESSION(r82376): Clicking on a label, associated with a disabled input element changes state of the element.
        https://bugs.webkit.org/show_bug.cgi?id=59037

        * fast/events/simulated-click-disabled-expected.txt: Added.
        * fast/events/simulated-click-disabled.html: Added.
2011-04-20  Dimitri Glazkov  <dglazkov@chromium.org>

        Reviewed by Kent Tamura.

        REGRESSION(r82376): Clicking on a label, associated with a disabled input element changes state of the element.
        https://bugs.webkit.org/show_bug.cgi?id=59037

        Test: fast/events/simulated-click-disabled.html

        * dom/EventDispatcher.cpp:
        (WebCore::EventDispatcher::dispatchSimulatedClick): Added check for disabled element.

git-svn-id: svn://svn.chromium.org/blink/trunk@84440 bbb929c8-8fbe-4397-9dbb-9b2b20218538